--- a/app/index.html
+++ b/app/index.html
@@ -70,7 +70,7 @@
         </div>
       </div>
     </header>
-<main class="main"></main>
+<main class="main">`</main>
     <footer class="footer">
       <div class="container">
         <div class="footer-top">
