--- a/app/index.html
+++ b/app/index.html
@@ -70,7 +70,74 @@
         </div>
       </div>
     </header>
-<main class="main">`</main>
+<main class="main">
+  <section class="top-slider">
+    <div class="container top-slider__container">
+      <div class="top-slider__inner">
+        <div class="top-slider__item">
+          <div class="top-slider__content">
+            <h3 class="top-slider__title">
+              New Season <br>
+              New Brand Collection
+            </h3>
+            <p class="top-slider__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto molestiae repellendus voluptate quidem temporibus? Aperiam ratione blanditiis aspernatur esse amet? Aliquam consectetur architecto facilis asperiores cumque eveniet pariatur soluta ex.
+            </p>
+            <a class="top-slider__link" href="#">
+              buy now
+            </a>
+          </div>
+            <img class="top-slider__img" src="images/slider/photo.png" alt="slider images">   
+        </div>
+        <div class="top-slider__item">
+          <div class="top-slider__content">
+            <h3 class="top-slider__title">
+              New Season <br>
+              New Brand Collection
+            </h3>
+            <p class="top-slider__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto molestiae repellendus voluptate quidem temporibus? Aperiam ratione blanditiis aspernatur esse amet? Aliquam consectetur architecto facilis asperiores cumque eveniet pariatur soluta ex.
+            </p>
+            <a class="top-slider__link" href="#">
+              buy now
+            </a>
+          </div>
+            <img class="top-slider__img" src="images/slider/photo.png" alt="slider images">          
+        </div>
+        <div class="top-slider__item">
+          <div class="top-slider__content">
+            <h3 class="top-slider__title">
+              New Season <br>
+              New Brand Collection
+            </h3>
+            <p class="top-slider__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto molestiae repellendus voluptate quidem temporibus? Aperiam ratione blanditiis aspernatur esse amet? Aliquam consectetur architecto facilis asperiores cumque eveniet pariatur soluta ex.
+            </p>
+            <a class="top-slider__link" href="#">
+              buy now
+            </a>
+          </div>
+            <img class="top-slider__img" src="images/slider/photo.png" alt="slider images">   
+        </div>
+        <div class="top-slider__item">
+          <div class="top-slider__content">
+            <h3 class="top-slider__title">
+              New Season <br>
+              New Brand Collection
+            </h3>
+            <p class="top-slider__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto molestiae repellendus voluptate quidem temporibus? Aperiam ratione blanditiis aspernatur esse amet? Aliquam consectetur architecto facilis asperiores cumque eveniet pariatur soluta ex.
+            </p>
+            <a class="top-slider__link" href="#">
+              buy now
+            </a>
+          </div>
+            <img class="top-slider__img" src="images/slider/photo.png" alt="slider images">   
+        </div>
+      </div>
+    </div>
+  </section>
+</main>
     <footer class="footer">
       <div class="container">
         <div class="footer-top">
