--- a/app/index.html
+++ b/app/index.html
@@ -600,6 +600,56 @@
         </div>
         <a class="product__link" href="#">load more</a>
       </section>
+      <section class="promo">
+        <div class="container">
+          <div class="promo__inner">
+            <p class="promo__subtitle">Style Fashion</p>
+            <h3 class="title">DEAL OF THE DAY</h3>
+            <div class="promo__clock" data-time="2022-11-25">
+              <div class="promo__clock-item">
+                <span class="promo__days"></span>
+                <div class="promo__text">Days</div>
+              </div>
+              <div class="promo__clock-item">
+                <span class="promo__hours"></span>
+                <div class="promo__text">Hours</div>
+              </div>
+              <div class="promo__clock-item">
+                <span class="promo__minutes"></span>
+                <div class="promo__text">Minutes</div>
+              </div>
+              <div class="promo__clock-item">
+                <span class="promo__seconds"></span>
+                <div class="promo__text">Seconds</div>
+              </div>
+            </div>
+            <a class="promo__link" href="#">shop now</a>
+          </div>
+        </div>
+      </section>
+
+      <div class="container">
+        <ul class="partners__list">
+          <li class="partners__item">
+            <img src="images/partners/1.png" alt="partner logo" />
+          </li>
+          <li class="partners__item">
+            <img src="images/partners/2.png" alt="partner logo" />
+          </li>
+          <li class="partners__item">
+            <img src="images/partners/3.png" alt="partner logo" />
+          </li>
+          <li class="partners__item">
+            <img src="images/partners/4.png" alt="partner logo" />
+          </li>
+          <li class="partners__item">
+            <img src="images/partners/5.png" alt="partner logo" />
+          </li>
+          <li class="partners__item">
+            <img src="images/partners/6.png" alt="partner logo" />
+          </li>
+        </ul>
+      </div>
     </main>
     <footer class="footer">
       <div class="container">
